# DreamPuppy-Ltda

./: README.md
fastAPI/: .gitignore  pyproject.toml
fastAPI/alembic/: .dockerignore  Dockerfile  Makefile  alembic.ini  requirements.txt
fastAPI/alembic/src/: env.py
fastAPI/alembic/src/versions/: 2ff806d39af6_add_weight_to_puppies_table.py  611279e0d231_kennel_id_will_now_become_a_column_.py  6a9c7d3a309e_set_all_kennel_ids_based_on_old_.py  d0d46cde0a3a_drop_geo_table_and_use_lat_and_lon_in_.py  d1eb33d3fcca_add_location_and_proximity_gps_feature.py
fastAPI/docker-compose/: Makefile  compose.yaml
fastAPI/docker-compose/debug/: .dockerignore
fastAPI/microservices/google-merchant/: .dockerignore  Dockerfile  Dockerfile.debug  Makefile  auth.py  env.py  main.debug.py  main.py  requirements.txt
fastAPI/src/: .dockerignore  Dockerfile  Dockerfile.debug  Makefile  README.md  dev-requirements.txt  main.py  requirements.txt
fastAPI/src/archives/user-feature/cruds/: user.py
fastAPI/src/archives/user-feature/models/: user.py
fastAPI/src/archives/user-feature/schemas/: user.py
fastAPI/src/gallery_api_impl/: database.py  env.py  main.py  security.py
fastAPI/src/gallery_api_impl/constants/: strings.py
fastAPI/src/gallery_api_impl/feat/auth/: routes.py
fastAPI/src/sh/: run.sh
fastAPI/tests/: test_app.py  utils.py
fastAPI/tests/breeds/: test_create_breed.py  test_read_breed.py  values.py
fastAPI/tests/gallery/: test_gallery.py
fastAPI/tests/kennels/: test_kennel.py  values.py
fastAPI/tests/puppies/: test_puppies.py  test_puppy.py  values.py
(+69 files in other folders)
